[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mlsampler"
version = "0.3.0"
description = "Flexible constrained random sampler for reverse analysis in machine learning"
authors = [
  { name="Jugai O" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "joblib"
]

[tool.setuptools.packages.find]
where = ["src"]